--- a/templates/article_admin/list.html.twig
+++ b/templates/article_admin/list.html.twig
@@ -12,6 +12,7 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Published?</th>
+                <th>#</th>
             </tr>
         </thead>
         <tbody>
@@ -22,6 +23,9 @@
                     <td>
                         <span class="fa fa-{{ article.isPublished ? 'check' : 'times' }}"></span>
                     </td>
+                    <td><a href="{{path('admin_article_edit', {id:article.id})}}">
+                        <span class="fa fa-pencil"></span>
+                    </a></td>
                 </tr>
             {% endfor %}
         </tbody>
